fix: GitHub Pages deployment config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copy-of-os10-instructor-virtual-2026",
-  "homepage": "https://juanacumard-a11y.github.io/os-10-2026/",
+  "homepage": "https://juanacumard-a11y.github.io/os10-instructor-2026/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
